// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CartCount/> matches the snapshot 1`] = `
<div>
  <span
    class="CartCount__AnimationStyles-xxvp4g-0 gDkasO"
  >
    <div>
      <div
        class="count CartCount__Dot-xxvp4g-1 fJsVOg"
      >
        11
      </div>
    </div>
  </span>
</div>
`;

exports[`<CartCount/> updates via props 1`] = `
<div>
  <span
    class="CartCount__AnimationStyles-xxvp4g-0 gDkasO"
  >
    <div>
      <div
        class="count CartCount__Dot-xxvp4g-1 fJsVOg count-enter-done"
      >
        12
      </div>
    </div>
  </span>
</div>
`;
